# raspi_os

./: .gitignore  README.md
src/: CMakeLists.txt  armtimer.c  armtimer.h  atags.c  atags.h  base.h  boot.S  console.c  console.h  cstartup.c  cstubs.c  framebuffer.c  framebuffer.h  gpio.h  interrupts.c  interrupts.h  kernel.c  linker.ld  mmio.h  rpi.x  start.S  system_timer.c  system_timer.h  tbfont.h
src/drivers/: gpio.c  gpio.h  vcio.c  vcio.h
src/peripherals/: armtimer.c  armtimer.h
